--- a/development/user-meas_pairwise_models.Rmd
+++ b/development/user-meas_pairwise_models.Rmd
@@ -80,7 +80,8 @@ pairwise_data <- pairwise_data %>%
   mutate(is_gea_scan = 
            ifelse((land1 == "Barrel 6-Land 2-Bullet 2-Allison-Sneox1-Round 3"| 
                      land2 == "Barrel 6-Land 2-Bullet 2-Allison-Sneox1-Round 3"), 
-                  "gea", is_gea_scan))
+                  "gea", is_gea_scan)) %>%
+  filter(Operator_S1 != "Marco", Operator_S2 != "Marco", Operator_S1 != "Jozef", Operator_S2 != "Jozef")
 
 pairwise_data_b6 <- pairwise_data %>%
   filter(Barrel_S1 == "Barrel 6" & Barrel_S2 == "Barrel 6") %>%
@@ -107,19 +108,30 @@ pairwise_data_b6 %>%
 
 ```{r}
 pairwise_model <- lmer(rfscore ~  (1|bullet_truth/unique_id_S1) + 
-                        (1|operator_truth) + (1|machine_truth) + 
-                        (1|operator_truth:bullet_truth) + (1|machine_truth:bullet_truth),
+                        (1|operator_truth) +
+                        (1|operator_truth:bullet_truth),
                   data = pairwise_data_b6)
 pairwise_model0 <- lmer(rfscore ~  (1|bullet_truth/unique_id_S1),
                   data = pairwise_data_b6)
 
+pairwise_model_tst <- lmer(rfscore~ unique_id_S1 + (1|bullet_truth/unique_id_S1) + 
+                             (1|operator_truth) + 
+                             (1|operator_truth:bullet_truth), 
+                           data = pairwise_data_b6)
+
 pairwise_model_no_gea <- lmer(rfscore ~ (1|bullet_truth/unique_id_S1) + 
-                                (1|operator_truth) + (1|machine_truth) + 
-                                (1|operator_truth:bullet_truth) + (1|machine_truth:bullet_truth),
+                                (1|operator_truth) +
+                                (1|operator_truth:bullet_truth),
                               data = pairwise_data_lea)
 
 pairwise_model0_no_gea <- lmer(rfscore ~ (1|bullet_truth/unique_id_S1),
                               data = pairwise_data_lea)
+
+
+pairwise_model_no_geatst <- lmer(rfscore~ unique_id_S1 + (1|bullet_truth/unique_id_S1) + 
+                             (1|operator_truth) + 
+                             (1|operator_truth:bullet_truth), 
+                           data = pairwise_data_lea)
 
 ```
 
@@ -131,7 +143,8 @@ pairwise_data_nonmatch <- pairwise_data %>%
   filter(is_gea_scan == "lea")
 
 
-pairwise_model_nm <- lmer(rfscore ~  (1|bullet_truth/unique_id_S1),
+pairwise_model_nm <- lmer(rfscore ~  operator_truth + bullet_truth + (1|bullet_truth) + 
+                            (1|operator_truth) + (1|operator_truth:bullet_truth),
                   data = pairwise_data_nonmatch)
 
 pairwise_data_nonmatch %>%
