--- a/development/data_clean.Rmd
+++ b/development/data_clean.Rmd
@@ -12,101 +12,342 @@ library(x3ptools)
 library(gridExtra)
 ```
 
+Define any functions we'll use later: 
+
+```{r}
+ccdata_ten_crosscut <- function(ccdata, y = NULL, range = 1e-05){
+  #x3pdat <- bulletxtrctr::check_x3p(x3p)
+  x3p_df <- na.trim(ccdata)
+  ys <- unique(x3p_df$y)
+  if (is.null(y))
+    y <- median(ys)
+  ind <- which.min(abs(y - ys))
+  y_min <- ys[ind - 5]
+  y_max <- ys[ind + 4]
+  lower <- min(y_min, y_max)
+  upper <- max(y_min, y_max)
+  x3p_df_fix <- x3p_df[x3p_df$y >= lower & x3p_df$y <= upper,]
+  return(na.omit(x3p_df_fix))
+}
+```
+
 Read in the data, and extract Operator, Barrel, Bullet, and Land.  
 
 ```{r}
-filenames <- list.files("//Volumes/CSAFEvBig12/CSAFEv1 Echo/Variability/", pattern = "*.x3p", full.names = T, recursive = T) ## should be 1100 + as of 4/24/19
+filenames <- list.files("/media/Raven/Variability/", pattern = "*.x3p", full.names = T, recursive = T) ## should be 1998 as of 5/21/19
 
 filenames_green <- filenames[which(str_detect(filenames, "Barrel Green") == T)] 
 filenames_orange <- filenames[which(str_detect(filenames, "Barrel Orange") == T)]
 filenames_pink <- filenames[which(str_detect(filenames, "Barrel Pink") == T)]
+```
 
 
+## BARREL ORANGE
 
-variability_scans_green <- data.frame(source = filenames_green)
-variability_scans_green <- variability_scans_green %>% mutate(x3p = purrr::map(as.character(source), .f = function(filename){
-  x3ptools::read_x3p(filename)
-}))
-head(variability_scans_green)
-
+```{r}
 variability_scans_orange <- data.frame(source = filenames_orange)
-variability_scans_orange <- variability_scans_orange %>% mutate(x3p = purrr::map(as.character(source), .f = function(filename){
+
+variability_scans_orange <- variability_scans_orange %>%
+  mutate(operator = purrr::map_chr(as.character(source), .f = function(filename){
+    strsplit(strsplit(filename, "//")[[1]][2], "/")[[1]][1]
+  }),
+  round = purrr::map_chr(as.character(source), .f = function(filename){
+     str_trim(strsplit(filename, "-")[[1]][2])
+     #strsplit(strsplit(filename, "//")[[1]][2], "/")[[1]][2]
+  }), 
+  machine = purrr::map_chr(as.character(source), .f = function(filename){
+    str_trim(strsplit(filename, "-")[[1]][6])
+  }), 
+  barrel = purrr::map_chr(as.character(source), .f = function(filename){
+    str_trim(strsplit(filename, "-")[[1]][3])
+    #strsplit(strsplit(filename, "//")[[1]][2], "/")[[1]][4]
+  }), 
+  bullet = purrr::map_chr(as.character(source), .f = function(filename){
+    str_trim(strsplit(filename, "-")[[1]][4])
+    #strsplit(strsplit(filename, "//")[[1]][2], "/")[[1]][5]
+  }), 
+  land = purrr::map_chr(as.character(source), .f = function(filename){
+    str_trim(strsplit(filename, "-")[[1]][5])
+    #cut_file <- strsplit(filename, "//")[[1]][2]
+    #str_sub(cut_file, start = str_locate(cut_file, "Land ")[1], end = str_locate(cut_file, "Land ")[2]+1)
+  }))
+
+orange_rounds123 <- variability_scans_orange %>% filter(round != "Round 4", round != "Round 5")
+head(orange_rounds123)
+
+orange_rounds123 <- orange_rounds123 %>% mutate(x3p = purrr::map(as.character(source), .f = function(filename){
   x3ptools::read_x3p(filename)
 }))
 
-variability_scans_pink <- data.frame(source = filenames_pink)
-variability_scans_pink <- variability_scans_pink %>% mutate(x3p = purrr::map(as.character(source), .f = function(filename){
-  x3ptools::read_x3p(filename)
+#saveRDS(orange_rounds123, "../data/variability_scans/orange_rounds123.rda")
+```
+
+
+
+```{r}
+orange_rounds123 <- orange_rounds123 %>% mutate(
+  x3p = x3p %>% purrr::map(.f = x3p_m_to_mum)
+)
+
+orange_rounds123 <- orange_rounds123 %>% mutate(ccdata = purrr::map(x3p, .f = function(x3p){
+  x3ptools::x3p_to_df(x3p)
 }))
-
-
-
-plot_x3p <- function(datafile, scan_num){
-  filename <- datafile$source[[scan_num]]
-  filename_clean <- str_sub(filename, start = str_locate(filename, "Variability - ")[1])
-  filename_new <- str_replace_all(str_replace(paste0("../data/variability_scans/scan_images/", filename_clean), ".x3p", ".png"), " ", "")
-  x3p_file <- datafile$x3p[[scan_num]]
-  image_x3p(x3p_file, file = filename_new, size = c(3500, 1500), zoom = 0.5)
-}
-#plot_x3p(variability_scans_orange, 6)
-
-#for(i in 1:390){
-#  plot_x3p(variability_scans_orange, i)
-#}
-
-#for(i in 1:360){
-#  plot_x3p(variability_scans_green, i)
-#}
-#rm(variability_scans_green)
-
-
-for(i in 1:360){
-  plot_x3p(variability_scans_pink, i)
-}
-rm(variability_scans_pink)
 ```
 
 ```{r}
 
+## Note: One of Mya's scans, Barrel Orange, Round 2, Bullet 1, Land 5, Sneox 2, that functions can't seem to find crosscut data for - even though image_x3p shows a relatively clean. This is scan 491 within orange_rounds123, so we will remove this for now. 
+orange_crosscuts <- orange_rounds123[-491,] %>%
+  mutate(
+    crosscut = purrr::map_dbl(x3p, .f = x3p_crosscut_optimize)
+  )
 
-user_meas <- user_meas %>% mutate(source = purrr::map_chr(as.character(source), .f = function(source){
-  strsplit(source, "//")[[1]][2]
-}))
+mya_no_cc <- orange_rounds123[491,] %>%
+  mutate(crosscut = 200)
 
+orange_crosscuts <- rbind(orange_crosscuts, mya_no_cc)
+orange_crosscuts <- orange_crosscuts %>% mutate(crosscut = ifelse(is.na(crosscut), median(crosscut, na.rm = T), crosscut))
 
-user_meas <- user_meas %>% mutate(Round = purrr::map_chr(as.character(source), .f = function(source){
-  strsplit(source, "/")[[1]][1]
-}), 
-Operator = purrr::map_chr(as.character(source), .f = function(source){
-  op <- strsplit(source, "/")[[1]][2]
-  strsplit(op, " ")[[1]][1]
-}), 
-source = factor(str_replace_all(source, ";", " -")),
-Barrel = purrr::map_chr(as.character(source), .f = function(source){
-  strsplit(source, " - ")[[1]][2]
-}), 
-Bullet = purrr::map_chr(as.character(source), .f = function(source){
-  strsplit(source, " - ")[[1]][3]
-}), 
-Land = purrr::map_chr(as.character(source), .f = function(source){
-  strsplit(source, " - ")[[1]][4]
-}), 
-Machine = purrr::map_chr(as.character(source), .f = function(source){
-  mac <- ifelse(str_detect(source, "Scan") == T, strsplit(source, " - ")[[1]][6], strsplit(source, " - ")[[1]][5]) 
-  str_replace_all(mac, " ", "")
-}), 
-Scan = purrr::map_chr(as.character(source), .f = function(source){
-  ifelse(str_detect(source, "Scan") == T, strsplit(source, " - ")[[1]][5], "Scan 1")
-}))
+orange_crosscuts <- orange_crosscuts %>% mutate(
+  ccdata = purrr::map2(.x = ccdata, .y = crosscut, 
+                       .f = ccdata_ten_crosscut)
+)
 
-#head(user_meas)
+orange_crosscuts <- orange_crosscuts %>% select(-x3p)
+#head(orange_crosscuts)
+
+orange_crosscuts <- orange_crosscuts %>% mutate(
+  ccdata = purrr::map(ccdata, .f = function(ccdata){
+    ccdata %>% group_by(x) %>% summarise(y = mean(y, na.rm = T), value = mean(value, na.rm = T))
+  })
+)
+#saveRDS(orange_crosscuts, "../data/variability_scans/orange_123_cc.rda")
 ```
 
 
-Save just the information about the study set up.  
-```{r, echo = F, warning = F, message = F}
-user_setup <- user_meas %>% select(source, Round, Operator, Barrel, Bullet, Land, Machine, Scan)
-#saveRDS(user_setup, "../data/user_meas_setup.rda")
 
+## BARREL GREEN  
+
+```{r}
+variability_scans_green <- data.frame(source = filenames_green)
+
+variability_scans_green <- variability_scans_green %>%
+  mutate(operator = purrr::map_chr(as.character(source), .f = function(filename){
+    strsplit(strsplit(filename, "//")[[1]][2], "/")[[1]][1]
+  }),
+  round = purrr::map_chr(as.character(source), .f = function(filename){
+     str_trim(strsplit(filename, "-")[[1]][2])
+     #strsplit(strsplit(filename, "//")[[1]][2], "/")[[1]][2]
+  }), 
+  machine = purrr::map_chr(as.character(source), .f = function(filename){
+    str_trim(strsplit(filename, "-")[[1]][6])
+  }), 
+  barrel = purrr::map_chr(as.character(source), .f = function(filename){
+    str_trim(strsplit(filename, "-")[[1]][3])
+    #strsplit(strsplit(filename, "//")[[1]][2], "/")[[1]][4]
+  }), 
+  bullet = purrr::map_chr(as.character(source), .f = function(filename){
+    str_trim(strsplit(filename, "-")[[1]][4])
+    #strsplit(strsplit(filename, "//")[[1]][2], "/")[[1]][5]
+  }), 
+  land = purrr::map_chr(as.character(source), .f = function(filename){
+    str_trim(strsplit(filename, "-")[[1]][5])
+    #cut_file <- strsplit(filename, "//")[[1]][2]
+    #str_sub(cut_file, start = str_locate(cut_file, "Land ")[1], end = str_locate(cut_file, "Land ")[2]+1)
+  }))
+
+#variability_scans_green
+green_rounds123 <- variability_scans_green %>% filter(round != "Round 4", round != "Round 5")
+# to check to see if we have everything we want: 
+#green_rounds123 %>% group_by(operator, round, machine, bullet) %>% summarise(n = n())
+
+
+#head(green_rounds123)
+
+green_rounds123 <- green_rounds123 %>% mutate(x3p = purrr::map(as.character(source), .f = function(filename){
+  x3ptools::read_x3p(filename)
+}))
+
+#saveRDS(green_rounds123, "../data/variability_scans/green_rounds123.rda")
 ```
+
+
+
+```{r}
+green_rounds123 <- green_rounds123 %>% mutate(
+  x3p = x3p %>% purrr::map(.f = x3p_m_to_mum)
+)
+
+green_rounds123 <- green_rounds123 %>% mutate(ccdata = purrr::map(x3p, .f = function(x3p){
+  x3ptools::x3p_to_df(x3p)
+}))
+```
+
+
+## CLEAN THIS UP!!!!!
+```{r}
+ccs_nomya <- green_rounds123 %>%
+  filter(operator != "Mya") %>%
+    mutate(
+    crosscut = purrr::map_dbl(x3p, .f = x3p_crosscut_optimize)
+  )
+
+###################################
+### COME BACK AND GET MYA DATA
+#mya_rounds123 <- mya_rounds123 %>% mutate(x3p = purrr::map(as.character(source), .f = function(filename){
+#  x3ptools::read_x3p(filename)
+#}))
+#mya_rounds123 <- mya_rounds123 %>% mutate(
+#  x3p = x3p %>% purrr::map(.f = x3p_m_to_mum)
+#)
+
+#mya_rounds123 <- mya_rounds123 %>% mutate(ccdata = purrr::map(x3p, .f = function(x3p){
+#  x3ptools::x3p_to_df(x3p)
+#}))
+#mya_rounds123 <- green_rounds123 %>%
+#  filter(operator == "Mya")
+
+mya_green_problem_ind <- c(28, 34, 57)
+#[1] /media/Raven/Variability//Mya/Round 1/Sneox2/Green/Bullet 2/Variability - Round 1 - Barrel Green - Bullet 2 - Land 4 - Sneox2 - 20x - auto light left image +20% - threshold 2 - resolution 4 - Mya Fisher.x3p 
+#[2] /media/Raven/Variability//Mya/Round 1/Sneox2/Green/Bullet 3/Variability - Round 1 - Barrel Green - Bullet 3 - Land 4 - Sneox2 - 20x - auto light left image +20% - threshold 2 - resolution 4 - Mya Fisher.x3p 
+#[3] /media/Raven/Variability//Mya/Round 2/Sneox 2/Green/Bullet 1/Variability - Round 2 - Barrel Green - Bullet 1 - Land 3 - Sneox2 - 20x - auto light left image +20% - threshold 2 - resolution 4 - Mya Fisher.x3p
+
+
+mya_crosscuts <- mya_rounds123[-c(28, 34, 57),] %>%
+  mutate(
+    crosscut = purrr::map_dbl(x3p, .f = x3p_crosscut_optimize)
+  )
+
+mya_no_cc <- mya_rounds123[c(28,34,57),] %>%
+  mutate(crosscut = 200)
+
+mya_crosscuts <- mya_crosscuts %>% mutate(crosscut = ifelse(is.na(crosscut), median(crosscut, na.rm = T), crosscut))
+mya_crosscuts <- rbind(mya_crosscuts, mya_no_cc)
+mya_crosscuts <- mya_crosscuts %>% select(-x3p)
+mya_crosscuts <- mya_crosscuts %>% mutate(
+  ccdata = purrr::map2(.x = ccdata, .y = crosscut, 
+                       .f = ccdata_ten_crosscut)
+)
+mya_crosscuts <- mya_crosscuts %>% mutate(
+  ccdata = purrr::map(ccdata, .f = function(ccdata){
+    ccdata %>% group_by(x) %>% summarise(y = mean(y, na.rm = T), value = mean(value, na.rm = T))
+  })
+)
+saveRDS(mya_crosscuts, "../data/variability_scans/green_123_cc_mya.rda")
+#green_crosscuts <- green_rounds123 %>%
+#  mutate(
+#    crosscut = purrr::map_dbl(x3p, .f = x3p_crosscut_optimize)
+#  )
+
+######################################
+green_crosscuts <- ccs_nomya %>% mutate(crosscut = ifelse(is.na(crosscut), median(crosscut, na.rm = T), crosscut))
+
+green_crosscuts <- green_crosscuts %>% mutate(
+  ccdata = purrr::map2(.x = ccdata, .y = crosscut, 
+                       .f = ccdata_ten_crosscut)
+)
+
+green_crosscuts <- green_crosscuts %>% select(-x3p)
+#head(green_crosscuts)
+
+green_crosscuts <- green_crosscuts %>% mutate(
+  ccdata = purrr::map(ccdata, .f = function(ccdata){
+    ccdata %>% group_by(x) %>% summarise(y = mean(y, na.rm = T), value = mean(value, na.rm = T))
+  })
+)
+#saveRDS(green_crosscuts, "../data/variability_scans/green_123_cc.rda")
+
+#green_crosscuts <- readRDS("../data/variability_scans/green_123_cc.rda")
+green_crosscuts <- rbind(green_crosscuts, mya_crosscuts)
+#saveRDS(green_crosscuts, "../data/variability_scans/green_123_cc_full.rda")
+```
+
+
+
+
+## BARREL PINK  
+
+```{r}
+variability_scans_pink <- data.frame(source = filenames_pink)
+
+variability_scans_pink <- variability_scans_pink %>%
+  mutate(operator = purrr::map_chr(as.character(source), .f = function(filename){
+    strsplit(strsplit(filename, "//")[[1]][2], "/")[[1]][1]
+  }),
+  round = purrr::map_chr(as.character(source), .f = function(filename){
+     str_trim(strsplit(filename, "-")[[1]][2])
+     #strsplit(strsplit(filename, "//")[[1]][2], "/")[[1]][2]
+  }), 
+  machine = purrr::map_chr(as.character(source), .f = function(filename){
+    str_trim(strsplit(filename, "-")[[1]][6])
+  }), 
+  barrel = purrr::map_chr(as.character(source), .f = function(filename){
+    str_trim(strsplit(filename, "-")[[1]][3])
+    #strsplit(strsplit(filename, "//")[[1]][2], "/")[[1]][4]
+  }), 
+  bullet = purrr::map_chr(as.character(source), .f = function(filename){
+    str_trim(strsplit(filename, "-")[[1]][4])
+    #strsplit(strsplit(filename, "//")[[1]][2], "/")[[1]][5]
+  }), 
+  land = purrr::map_chr(as.character(source), .f = function(filename){
+    str_trim(strsplit(filename, "-")[[1]][5])
+    #cut_file <- strsplit(filename, "//")[[1]][2]
+    #str_sub(cut_file, start = str_locate(cut_file, "Land ")[1], end = str_locate(cut_file, "Land ")[2]+1)
+  }))
+
+#variability_scans_pink
+pink_rounds123 <- variability_scans_pink %>% filter(round != "Round 4", round != "Round 5")
+# to check to see if we have everything we want: 
+#pink_rounds123 %>% group_by(operator, round, machine, bullet) %>% summarise(n = n())
+
+
+#head(pink_rounds123)
+
+pink_rounds123 <- pink_rounds123 %>% mutate(x3p = purrr::map(as.character(source), .f = function(filename){
+  x3ptools::read_x3p(filename)
+}))
+
+## DONT SAVE - STILL HAVE x3p
+#saveRDS(pink_rounds123, "../data/variability_scans/pink_rounds123.rda")
+```
+
+
+
+```{r}
+pink_rounds123 <- pink_rounds123 %>% mutate(
+  x3p = x3p %>% purrr::map(.f = x3p_m_to_mum)
+)
+
+pink_rounds123 <- pink_rounds123 %>% mutate(ccdata = purrr::map(x3p, .f = function(x3p){
+  x3ptools::x3p_to_df(x3p)
+}))
+```
+
+```{r}
+pink_crosscuts <- pink_rounds123 %>%
+  mutate(
+    crosscut = purrr::map_dbl(x3p, .f = x3p_crosscut_optimize)
+  )
+
+######################################
+pink_crosscuts <- pink_crosscuts %>% mutate(crosscut = ifelse(is.na(crosscut), median(crosscut, na.rm = T), crosscut))
+
+pink_crosscuts <- pink_crosscuts %>% mutate(
+  ccdata = purrr::map2(.x = ccdata, .y = crosscut, 
+                       .f = ccdata_ten_crosscut)
+)
+
+pink_crosscuts <- pink_crosscuts %>% select(-x3p)
+#head(pink_crosscuts)
+
+pink_crosscuts <- pink_crosscuts %>% mutate(
+  ccdata = purrr::map(ccdata, .f = function(ccdata){
+    ccdata %>% group_by(x) %>% summarise(y = mean(y, na.rm = T), value = mean(value, na.rm = T))
+  })
+)
+
+saveRDS(pink_crosscuts, "../data/variability_scans/pink_123_cc.rda")
+```
+
+
 
